@@ -1,4 +1,4 @@
-Copyright (c) 2020-2021 Michal Josef Špaček
+Copyright (c) 2020-2022 Michal Josef Špaček
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
